welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:0: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:3: error: value c is not a member of object java.awt.Color
{setCouleurBrosse(Color. c )
                         ^