welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def faireF(c:Color) 
{setCouleurBrosse(Color. c )
	baisseBrosse()
	avance()
	avance()
	recule()
	gauche()
	avance()
	recule()
	recule()
	avance()
	leveBrosse()
	setCouleurBrosse(Color.yellow )
	baisseBrosse()
	leveBrosse()
	gauche()
}

